@@ -316,8 +316,12 @@ namespace DLS {
             String SourceForm;       ///< <ISRF-ck>. Identifies the original form of the material that was digitized, such as record, sampling CD, TV sound track. This is not neccessarily the same as <i>Medium</i>.
             String Commissioned;     ///< <ICMS-ck>. Lists the name of the person or organization that commissioned the subject of the file, e.g., Pope Julian II.
             String Subject;          ///< <ISBJ-ck>. Describes the contents of the file.
-            bool UseFixedLengthStrings; ///< Set this to true if the info strings should be stored with a fixed length format. This is used for gig files, not for ordinary DLS files.
 
+            struct FixedStringLength {
+                uint32_t chunkId;
+                int length;
+            };
+            const FixedStringLength* FixedStringLengths; ///< List of IDs and string lengths for strings that should be stored in a fixed length format. This is used for gig files, not for ordinary DLS files.
             Info(RIFF::List* list);
             virtual ~Info();
             virtual void UpdateChunks();
@@ -325,7 +329,7 @@ namespace DLS {
             RIFF::List* pResourceListChunk;
 
             static void LoadString(uint32_t ChunkID, RIFF::List* lstINFO, String& s);
-            static void SaveString(uint32_t ChunkID, RIFF::List* lstINFO, const String& s, const String& sDefault, bool bUseFixedLengthStrings, int size);
+            void SaveString(uint32_t ChunkID, RIFF::List* lstINFO, const String& s, const String& sDefault);
     };
 
     /** Abstract base class which encapsulates data structures which all DLS resources are able to provide. */
