@@ -738,6 +738,7 @@ namespace gig {
             friend class Sample;
             friend class Group; // so Group can access protected member pRIFF
         private:
+            static const DLS::Info::FixedStringLength FixedStringLengths[];
             std::list<Group*>*          pGroups;
             std::list<Group*>::iterator GroupsIterator;
     };
